tests/fixtures/negative/empty-blocks/EmptyForBlock.kt
package fixtures.negative.emptyblocks

fun printNumbers() {
    for (i in 1..10) {
        println(i)
    }
}
